key.core/src/test/resources/de/uka/ilkd/key/java/coverage/rejected/instanceof-pattern/InstPattern.java
public class InstPattern {
    int f(Object o) {
        if (o instanceof String s) { return s.length(); }
        return 0;
    }
}
